--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <input type="button" id="savingsDepositButton" value="Deposit" />
       <input type="button" id="savingsWithdrawalButton" value="Withdraw" />
     </div>
-
+    <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
